@@ -238,9 +238,11 @@ reserved:	BINARY-LONG-LONG=BINARY-DOUBLE
 reserved:	EMPTY-CHECK=REQUIRED
 reserved:	EQUALS=EQUAL
 reserved:	FOREGROUND-COLOUR=FOREGROUND-COLOR
+reserved:	HIGH-VALUES=HIGH-VALUE
 reserved:	INITIALISE=INITIALIZE
 reserved:	INITIALISED=INITIALIZED
 reserved:	LENGTH-CHECK=FULL
+reserved:	LOW-VALUES=LOW-VALUE
 reserved:	ORGANISATION=ORGANIZATION
 reserved:	SYNCHRONISED=SYNCHRONIZED
 reserved:	TIMEOUT=TIME-OUT
